hopefully fixes issue where svg does not render on mobile

--- a/src/styles/hero-section.css
+++ b/src/styles/hero-section.css
@@ -72,7 +72,7 @@ h1 {
 .profile-pic {
   width: 24rem;
   position: absolute;
-  top: 8.66%;
+  top: 9.1%;
   left: 50%;
   transform: translateX(-50%);
 }
